Fix bugs in Not optimisations